Arreglos en rutas

--- a/WebApp-Angular/src/app/navigation/navigation.component.html
+++ b/WebApp-Angular/src/app/navigation/navigation.component.html
@@ -4,12 +4,12 @@
     <ul>
      <li><a routerLink="/Administracion">Inicio</a></li>
      <li><a routerLink="/Administracion/Role">Roles</a></li>
-     <li><a routerLink="/Administracion/Sucursales">Sucursales</a></li>
-     <li><a routerLink="/Administracion/Trabajadores">Trabajadores</a></li>
-     <li><a routerLink="/Administracion/Proveedores">Proveedores</a></li>
-     <li><a routerLink="/Administracion/Productos">Productos</a></li>
-     <li><a routerLink="/Administracion/Compras">Compras</a></li>
-     <li><a routerLink="/Administracion/Horario">Horario</a></li>
+     <li><a routerLink="/Administracion/Branch">Sucursales</a></li>
+     <li><a routerLink="/Administracion/Employee">Trabajadores</a></li>
+     <li><a routerLink="/Administracion/Provider">Proveedores</a></li>
+     <li><a routerLink="/Administracion/Product">Productos</a></li>
+     <li><a routerLink="/Administracion/Purchase">Compras</a></li>
+     <li><a routerLink="/Administracion/Schedule">Horario</a></li>
      <li><a routerLink="/Administracion/Planilla">Planilla</a></li>
   
      <li style="float:right"><a class="active" routerLink="/Login">Login</a></li>
@@ -31,12 +31,12 @@
           <div class="collapse navbar-collapse" id="navbar-mobile">
           <ul class="nav navbar-nav">
             <li><a routerLink="/Administracion/Role">Roles</a></li>
-            <li><a routerLink="/Administracion/Sucursales">Sucursales</a></li>
-            <li><a routerLink="/Administracion/Trabajadores">Trabajadores</a></li>
-            <li><a routerLink="/Administracion/Proveedores">Proveedores</a></li>
-            <li><a routerLink="/Administracion/Productos">Productos</a></li>
-            <li><a routerLink="/Administracion/Compras">Compras</a></li>
-            <li><a routerLink="/Administracion/Horario">Horario</a></li>
+            <li><a routerLink="/Administracion/Branch">Sucursales</a></li>
+            <li><a routerLink="/Administracion/Employee">Trabajadores</a></li>
+            <li><a routerLink="/Administracion/Provider">Proveedores</a></li>
+            <li><a routerLink="/Administracion/Product">Productos</a></li>
+            <li><a routerLink="/Administracion/purchase">Compras</a></li>
+            <li><a routerLink="/Administracion/Schedule">Horario</a></li>
             <li><a routerLink="/Administracion/Planilla">Planilla</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -65,8 +65,8 @@
           <div class="collapse navbar-collapse" id="navbar-mobile">
           <ul class="nav navbar-nav">
             <li><a routerLink="/Administracion/Role">Roles</a></li>
-            <li><a routerLink="/Administracion/Compras">Compras</a></li>
-            <li><a routerLink="/Administracion/Horario">Horario</a></li>
+            <li><a routerLink="/Administracion/Purchase">Compras</a></li>
+            <li><a routerLink="/Administracion/Schedule">Horario</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a routerLink="/Administracion/Login">Login</a></li>
