--- a/WebApp-Angular/src/app/administration/roles/roles.component.html
+++ b/WebApp-Angular/src/app/administration/roles/roles.component.html
@@ -1,45 +1,59 @@
 <div class="container">
-  <h1 style="color:#263238">Gestión de Roles</h1>
-</div>
-<br><br>
-
-<div class="table-responsive">
-  <table class="table table-hover">
-    <tr>
-      <th>Puesto</th>
-      <th>Descripción</th>
-      <th></th>
-    </tr>
-    <tr *ngFor="let Role of service.roleList" class="active">
-      <td (click)="populateForm(Role)"> {{Role.Name}}</td>
-      <td> {{Role.Description}}</td>
-      <td><button class="btn btn-sm btn-outline-danger">X</button></td>
-    </tr>
-  </table>
-</div>
-
-<br><br><br>
-<div class="container">
-  <h3> Agregar roles <span class="label label-warning">Nuevo</span></h3>
+    <h1 style="color:#263238">Gestión de Roles</h1>
+  </div>
+  
+  <div class="container">
+    <br>
+    <form class="form-horizontal" action="">
+      <div class="form-group">
+        <label for="busqueda" class="control-label col-md-1">Búsqueda:</label>
+        <div class="col-md-5">
+          <input class="form-control" type="search" ng-model="busqueda" placeholder="Buscar..." />
+        </div>
+      </div>
+    </form>
+  </div>
+  
   <br><br>
-  <form name="rolForm" ng-submit="addRol()" novalidate class="form-horizontal">
-    <div class="form-group">
-      <label for="nombre" class="control-label col-md-2">Nombre:</label>
-      <div class="col-md-4">
-        <input class="form-control" type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true">
+  
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <tr>
+        <th>Puesto</th>
+        <th>Descripción</th>
+      </tr>
+      <tr *ngFor="let Role of service.roleList" class="active">
+        <td (click)="populateForm(Role)"> {{Role.Name}}</td>
+        <td> {{Role.Description}}</td>
+        <td><button class="btn btn-sm btn-outline-danger" (click)="onDelete(Role.Name)">X</button></td>
+      </tr>
+    </table>
+  </div>
+  
+  <br><br><br>
+  
+  <div class="container">
+    <h3> Agregar roles <span class="label label-warning">Nuevo</span></h3>
+    <br><br>
+  
+    <form #form = "ngForm" (submit)="onSubmit(form)" novalidate class="form-horizontal" autocomplete="off">
+      <div class="form-group">
+        <label for="nombre" class="control-label col-md-2">Nombre:</label>
+        <div class="col-md-4">
+            <input name="Name" #Name="ngModel" [(ngModel)]="service.formData.Name" class="form-control" required>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="descripcion" class="control-label col-md-2">Descripción:</label>
-      <div class="col-md-4">
-        <input class="form-control" type="text" placeholder="Descripción" ng-model="nrol.descripcion"
-          ng-required="true">
+      <div class="form-group">
+        <label for="descripcion" class="control-label col-md-2">Descripción:</label>
+        <div class="col-md-4">
+          <input class="form-control"  name="Description" [(ngModel)]="service.formData.Description" #Description="ngModel" required>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-md-4 col-md-offset-3">
-        <input class="btn btn-primary" type="submit" value="Agregar" ng-disabled="rolForm.$invalid" />
+      <div class="form-group">
+        <div class="col-md-4 col-md-offset-3">
+          <button type="submit" [disabled]="form.invalid" class="btn btn-primary">SUBMIT</button>
+        </div>
       </div>
-    </div>
-  </form>
-</div>
+    </form>
+  </div>
+  
