--- a/WebApp - angular/app/app/src/app/navigation/navigation.component.html
+++ b/WebApp - angular/app/app/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="hidden-xs navbar navbar-default navbar-fixed-top" id="nav-bar">
   <ul>
    <li><a routerLink="/Administracion">Inicio</a></li>
-   <li><a routerLink="/Administracion/Role">Roles</a></li>
+   <li><a routerLink="/Role">Roles</a></li>
    <li><a routerLink="/Administracion/Sucursales">Sucursales</a></li>
    <li><a routerLink="/Administracion/Trabajadores">Trabajadores</a></li>
    <li><a routerLink="/Administracion/Proveedores">Proveedores</a></li>
