--- a/WebApp - angular/app/app/src/app/administration/roles/roles.component.html
+++ b/WebApp - angular/app/app/src/app/administration/roles/roles.component.html
@@ -51,7 +51,7 @@
     </div>
     <div class="form-group">
       <div class="col-md-4 col-md-offset-3">
-        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">SUBMIT</button>
+        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Agregar</button>
       </div>
     </div>
   </form>
