--- a/WebApp - angular/app/app/src/app/administration/sucursales/sucursales.component.html
+++ b/WebApp - angular/app/app/src/app/administration/sucursales/sucursales.component.html
@@ -18,7 +18,7 @@
           <td>{{Officce.Address}}</td>
           <td>{{Officce.Telephone}}</td>
           <td>{{Officce.Administrator}}</td>
-          <td><button class="btn btn-sm btn-outline-danger">X</button></td>
+          <td><button class="btn btn-sm btn-outline-danger" (click)="onDelete(Officce.Name)>X</button></td>
         </tr>
       </table>
     </div>
@@ -26,39 +26,34 @@
   <div class="container">
     <h3>Agregar Sucursal <span class="label label-warning">Nueva</span></h3>
     <br><br>
-    <form name="sucursalForm" ng-submit="addSuc()" novalidate class="form-horizontal">
+    <form #form = "ngForm" (submit)="onSubmit(form)" novalidate class="form-horizontal" autocomplete="off">
       <div class="form-group">
         <label for="nombre" class="control-label col-md-2">Nombre:</label>
         <div class="col-md-4">
-          <input  class="form-control"
-           type="text" placeholder="Nombre" ng-model="nsuc.nombre" ng-required="true">
+          <input name="Name" #Name="ngModel" [(ngModel)]="service.formData.Name" class="form-control" required>
         </div>
       </div>
       <div class="form-group">
         <label for="direccion" class="control-label col-md-2">Dirección:</label>
         <div class="col-md-4">
-          <input  class="form-control" type="text"
-          placeholder="Dirección" ng-model="nsuc.direccion" ng-required="true">
+          <input name="Address" #Address="ngModel" [(ngModel)]="service.formData.Address" class="form-control" required>
         </div>
       </div>
       <div class="form-group">
         <label for="telefono" class="control-label col-md-2">Teléfono:</label>
         <div class="col-md-4">
-          <input  class="form-control" type="tel" placeholder="Teléfono +(506)22304585"
-          ng-model="nsuc.telefono"  pattern="+([1-9]{1}[0-9]{2})[1-9]{1}[0-9]{7}" ng-required="true">
+          <input name="Phone" #Phone="ngModel" [(ngModel)]="service.formData.Phone" class="form-control" required>
         </div>
       </div>
       <div class="form-group">
         <label for="administrador" class="control-label col-md-2">Administrador:</label>
         <div class="col-md-4">
-          <input  class="form-control" type="text"
-           placeholder="Administrador" ng-model="nsuc.administrador" ng-required="true">
+          <input name="Administrator" #Administrator="ngModel" [(ngModel)]="service.formData.Administrator" class="form-control" required>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-4 col-md-offset-3">
-          <input class="btn btn-primary" type="submit"
-          value= "Agregar" ng-disabled="sucursalForm.$invalid"/>
+          <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Agregar</button>
         </div>
       </div>
   </form>
