--- a/WebApp-Angular/src/app/reports/product-list/product-list.component.html
+++ b/WebApp-Angular/src/app/reports/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-        <h1 style="color:#263238">Inventario</h1>
+        <h1 style="color:#263238">Inventario {{sucursal}}</h1>
       
       <br><br>
       
